<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_margin="16dp"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:text="Titulo do Hospital" />

    <CheckBox
        android:id="@+id/sus"
        android:text="@string/sus"
        android:layout_width="wrap_content"
        android:checked="true"
        android:padding="5dp"
        android:enabled="false"
        android:textColor="@color/textDarkGrayColor"
        android:button="@drawable/checkbox_selector"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/emergency"
        android:text="@string/emergency"
        android:layout_width="wrap_content"
        android:padding="5dp"
        android:enabled="false"
        android:textColor="@color/textDarkGrayColor"
        android:button="@drawable/checkbox_selector"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/ambulatory"
        android:text="@string/ambulatory"
        android:layout_width="wrap_content"
        android:checked="true"
        android:padding="5dp"
        android:enabled="false"
        android:textColor="@color/textDarkGrayColor"
        android:button="@drawable/checkbox_selector"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/surgery"
        android:text="@string/surgery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:enabled="false"
        android:textColor="@color/textDarkGrayColor"
        android:button="@drawable/checkbox_selector"
        android:checked="false" />

    <CheckBox
        android:id="@+id/obstetrics"
        android:text="@string/obstetrics"
        android:layout_width="wrap_content"
        android:padding="5dp"
        android:enabled="false"
        android:textColor="@color/textDarkGrayColor"
        android:button="@drawable/checkbox_selector"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/neonatal"
        android:text="@string/neonatal"
        android:layout_width="wrap_content"
        android:padding="5dp"
        android:enabled="false"
        android:textColor="@color/textDarkGrayColor"
        android:button="@drawable/checkbox_selector"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/dialysis"
        android:text="@string/dialysis"
        android:layout_width="wrap_content"
        android:padding="5dp"
        android:enabled="false"
        android:textColor="@color/textDarkGrayColor"
        android:checked="true"
        android:button="@drawable/checkbox_selector"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/administrative_esphere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hospital público" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Este hospital atende diversos clientes" />

</LinearLayout>