<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/main_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_sos_512x512" />

    <LinearLayout
        android:id="@+id/you_are_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:visibility="gone"
        android:layout_marginTop="36dp">

        <fishtudo.sos.components.FTTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_are_in"
            android:textSize="20sp" />

        <fishtudo.sos.components.FTTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:id="@+id/city_name" />

    </LinearLayout>

    <fishtudo.sos.components.FTTextView
        android:id="@+id/searching_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_icon"
        android:layout_marginTop="36dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:text="@string/searching_location"/>

    <fishtudo.sos.components.FTTextView
        android:id="@+id/textView_searching"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_icon"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginTop="36dp"
        android:text="@string/searching_for_hospitals"
        android:visibility="invisible" />

</RelativeLayout>
